--- a/public/views/play/play.html
+++ b/public/views/play/play.html
@@ -61,7 +61,7 @@
           
             </div>
             <!-- answers -->
-            <div class="typeOfAnswer">You can chose <span class="multiple"> 3 </span>answers only</div>
+            <div class="typeOfAnswer">You can chose <span class="multiple">no</span>answers only</div>
             <div class="option_list">
         
             </div>
