--- a/public/views/edit/edit.html
+++ b/public/views/edit/edit.html
@@ -79,11 +79,9 @@
             <div class="allTypeanswers">
                 <select name="selectType" id="choseTypeAnswers">
                     <option value="No_Typeanswers">Type answer</option>
-                    <option value="Multiple">Multiple Choice</option>
-                    <option value="ChoseOne">Only Choice</option>
-                    <!-- <option value="TrueFalse">True or False</option> -->
+                    <option value="Checkbox">Checkbox</option>
+                    <option value="Multiple">Multiple choice</option>
                 </select>
-                    <!-- // multipleAnswer -->
                     <div class="multipleAnswer" id="hide">
                         <div class="set-input">
                             <input type="text" placeholder="Type answer" id="answer" required>
@@ -102,7 +100,7 @@
                     <!-- // add type answer input -->
                     <div class="divAddoption"><button type="submit" class="addoption" id="hide">Add Answer+</button></div>
                     <!-- /// post -->
-                    <div class="postQuestion"><input value="SAVE ANSWER" class="btn_PostData"></div>
+                    <div class="postQuestion"><input type="submit" value="SAVE ANSWER" class="btn_PostData"></div>
             </div>
         </div> 
     </div>
