--- a/public/views/play/play.html
+++ b/public/views/play/play.html
@@ -18,8 +18,10 @@
             <div class="appLogo"><img src="../../img/logo.png" width="15%"></div>
             <div class="TitleApp">SMART APP NODE-G02</div>
             <div class="showUserLogin">
-                <i class='fa fa-user-circle-o' style='font-size:24px'></i>
-                <span class="userLogin"></span>
+                <a href="../../index.html">
+                    <i class='fa fa-user-circle-o' style='font-size:24px'></i>
+                    <span class="userLogin"></span>
+                </a>
             </div>
         </div>
     </div>
