--- a/public/views/edit/edit.html
+++ b/public/views/edit/edit.html
@@ -8,9 +8,12 @@
     <title>App quiz</title>
     <!-- api -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="../../css/style.css">
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
+    <!-- <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -59,7 +62,7 @@
                             <div class="option"><span> A3 </span></div>
                             <div class="option"><span> A4 </span></div>
                         </div>  
-                        <div class="clickDesplay"><i class='fas fa-chevron-circle-down'></i></div>
+                        <div class="clickDesplay"><i class="fa fa-caret-down"></i></div>
                     </div>  -->
                 </div>            
             </div>
