--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1024,6 +1024,7 @@ form .btn input[type="submit"]{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 .card-group {
     display: flex;
@@ -1031,6 +1032,30 @@ form .btn input[type="submit"]{
     width: 80%;
     gap: 1rem;
 }
+.remove_quiz{
+    display: flex;
+    justify-content: flex-end;
+}
+.remove_quiz .fa{
+    cursor: pointer;
+    margin-top: -9px;
+    margin-right: -8px;
+    font-size: 30px;
+    background-color: white;
+    text-align: center;
+    color:red;
+    width: 1.6rem;
+    height: 1.6rem;
+    border-radius: 50%;
+}
+
+.remove_quiz .fa:hover{
+    background-color: white;
+    color: red;
+    font-size: 29px;
+}
+
+
 .field:hover{
     border-color: #50a4f8;
     border-radius: 5px;
